# twiza-moneypenny-claude-debug

./: .gitignore  CLAUDE-DEBUG-REPORT.md  DEPLOY-TWIZA-INSTALLER.bat  HEARTBEAT.md  IDENTITY.md  INSTALLA-TWIZA.bat  INTEGRATIONS.md  LICENSE  LICENSE.txt  MEMORY.md  README-WINDOWS-INSTALLER.md  README.md  README.txt  REPORT-COMPARATIVO-REPOS.md  ROADMAP.md  SOUL.md  STYLE-GUIDE.md  TOOLS.md  TWIZA-Capabilities-Public.md  TWIZA-Integrazioni-Complete.md  TWIZA-Windows-Installer.nsi  USER.md  build-twiza-installer.bat  create-twiza-vm.bat  index.html  install-twiza-automated.ps1  main.js  package.json  twiza-cleanup.bat  twiza-v26-installer-mods.md  twiza-v26-offline-plan.md
assets/: .gitkeep
branding/: check-branding.sh  index.html  it-locale.js  restore-branding.sh
docs/: BRANDING.md  BUILD.md  CONTRIBUTING.md  USER-GUIDE.md
docs-moneypenny/: capabilities.html  connectors.html  gateway.html  getting-started.html  index.html  model-manager.html  model-manager.js  models.html  nodes.html  privacy.html  troubleshooting.html
installer/: Install-TWIZA.ps1  Uninstall-TWIZA.ps1
integrations/: manus.js
plans/: social-media-automation-plan.md
preview/: chat-preview.html  wizard-preview.html
scripts/: backup-moneypenny.sh  bootstrap-wsl.ps1  generate-ico.mjs  install-build-tools.bat  install-ollama.ps1  windows-build-setup.ps1
src/: config-generator.js  i18n.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gateway.rs  main.rs  oauth.rs  state.rs  wsl.rs
templates/: bootstrap-wsl.sh  openclaw.json.template
ui-patches/: README.md  apply.sh
(+28 files in other folders)
