[package]
name = "twiza-moneypenny"
version = "0.1.0"
description = "TWIZA Moneypenny — Your Personal AI Agent for Windows. ...more than an agent!"
authors = ["TWIZA by SHAKAZAMBA"]
license = "MIT"
repository = "https://github.com/AvatarNemo/twiza-moneypenny"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "5"
open = "5"
urlencoding = "2"
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
